Fix media not showing, fix tables, add awake route

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -103,10 +103,10 @@ h1,h2,h3,h4,h5, h6 {
 .fixed-table th {
 	position: sticky !important;
 	top: 0 !important;
-	z-index: 10 !important;
+	z-index: 99 !important;
 	background: whitesmoke !important;
   }
-
+  
 .content_section {
 	display: block;
 }
